@@ -1,4 +1,14 @@
 # DS_Project
 # IMPORTANT NOTES
--Java JDK-19
--execute run.bat
+
+1.Run the Program from "run.bat"
+   because it contains this command 
+   java --module-path "javafx-sdk-19\lib" --add-modules javafx.controls,javafx.fxml -jar p1andp2.jar 
+
+2. JDK 19 is used
+
+3. in phase 1 stage, in order to make the program functions well, you should press "browse" to get the xml file to be edited, 
+then you press "Check" then "Correct" then "Prettify" then any button else because all other functions will
+depend on Correct.xml file
+
+4. install graphviz and during the setup, select "Add Graphiz to the system PATH for all users"
